# zpass

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  Z_Serif.html  cliff.toml
.claude/: settings.json
.github/workflows/: desktop-build.yml  extension-build.yml  phone-android-build.yml  release-notes.yml  website-deploy.yml
assets/: render-icons.mjs
crates/zpass-browser-bridge/: Cargo.toml
crates/zpass-config/: Cargo.toml
crates/zpass-config/src/: lib.rs
crates/zpass-crypto/: Cargo.toml
crates/zpass-crypto/src/: lib.rs
crates/zpass-otp/: Cargo.toml
crates/zpass-otp/src/: lib.rs
crates/zpass-passkey/: Cargo.toml
crates/zpass-passkey/src/: lib.rs
crates/zpass-platform/: Cargo.toml
crates/zpass-ssh-agent-proto/: Cargo.toml
crates/zpass-ssh-agent-proto/src/: lib.rs
crates/zpass-trusted-device/: Cargo.toml
crates/zpass-vault-format/: Cargo.toml
crates/zpass-vault-format/src/: lib.rs
crates/zpass-vault-service/: Cargo.toml
crates/zpass-vault-service/src/: clock.rs  events.rs  lib.rs
crates/zpass-vault-service/tests/: regression.rs
crates/zpass-vault-store/: Cargo.toml
crates/zpass-vault-store/src/: lib.rs
cryptocore/: Cargo.toml  build.rs
cryptocore/scripts/: build-android.ps1  build-android.sh  build-harmony.ps1  build-harmony.sh
cryptocore/src/: android.rs  envelope.rs  harmony.rs  hkdf.rs  kdf2.rs  keyset.rs  lan_transport.rs  lib.rs  srp.rs  wasm.rs
cryptocore/src/sync/: merge.rs  mod.rs  pake.rs  proto.rs  server.rs  session.rs
cryptocore/tests/: cross_validation.rs
cryptocore/tests/fixtures/: cross-validation.json
design/: README.md  ZPass-Mobile-Canvas.html  ZPass-Mobile.html  ZPass-Promo.html  ZPass-Site.html  ZPass.html
design/src/: app.css  app.jsx  data.jsx  detail.jsx  edit.jsx  i18n.jsx  icons.jsx  import-modal.jsx  importer.jsx  tokens.css  tweaks.jsx  ui.jsx  unlock.jsx  vault.jsx
desktop/: .gitignore  .golangci.yml  .npmrc  AGENTS.md  README.md  Taskfile.yml  biome.json  breachcheck.go  configservice.go  cryptoutil.go  electron-builder.win.yml  exportservice.go  fonts.go  fonts_darwin.go  fonts_linux.go  fonts_windows.go  forge.config.ts  go.mod  go.sum  main.go  nativebridge_config.go  nativebridge_protocol.go  nativebridge_protocol_test.go  nativebrowserbridge.go  nativehost_launcher.go  nativehost_launcher_darwin.go  nativehost_launcher_linux.go  nativehost_launcher_windows.go  nativehost_main.go  nativehost_test.go  openapi.yaml  package-lock.json  package.json  passkeyservice.go  passkeyservice_test.go  pnpm-lock.yaml  qrservice.go  serviceinstall.go  serviceinstall_linux.go  serviceinstall_others.go  (+34 more)
desktop/design/: vault-home.html
desktop/electron/: app-update.yml
desktop/frontend/: .editorconfig  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/patches/: extract-zip@2.0.1.patch
desktop/scripts/: dev-watcher.mjs  install-electron.mjs  make-arch.sh
desktop_rs/: Cargo.toml
desktop_rs/zpass-agent/: Cargo.toml
desktop_rs/zpass-agent/src/: agent_proto.rs  config.rs  control.rs  listener.rs  main.rs  state.rs
desktop_rs/zpass-desktop/: Cargo.toml
desktop_rs/zpass-desktop/locales/: en.json  zh.json
desktop_rs/zpass-desktop/src/: app.rs  main.rs
desktop_rs/zpass-desktop/src/i18n/: mod.rs
desktop_rs/zpass-desktop/src/screens/: generator.rs  import_export.rs  mod.rs  onboarding.rs  ssh_agent.rs  tests.rs  totp.rs  unlock.rs  vault.rs  welcome.rs
desktop_rs/zpass-desktop/src/services/: clipboard.rs  export.rs  generator.rs  import.rs  mod.rs  otp.rs  passkey.rs  qr.rs  vault.rs
desktop_rs/zpass-desktop/src/services/service_install/: linux.rs  mod.rs  unsupported.rs
desktop_rs/zpass-desktop/src/services/ssh_agent_host/: control.rs  mod.rs  signer.rs  state.rs  token.rs
desktop_rs/zpass-desktop/src/theme/: mod.rs  tokens.rs
desktop_rs/zpass-desktop/src/widgets/: mod.rs  sidebar.rs  titlebar.rs
desktop_rs/zpass-native-host/: Cargo.toml
docs/: dev-setup.md
extension/: README.md  package-lock.json  package.json  tsconfig.json  wxt.config.ts
extension/entrypoints/: background.ts  content.ts  passkey.content.ts  popup.html
extension/native-host/: chrome.example.json  firefox.example.json  install-chrome.ps1
extension/scripts/: cws-get-refresh-token.mjs  generate-icons.mjs
extension/store/: README.md  listing-en.md  listing-zh.md
harmony/: .gitignore  MIGRATION-PARITY-AUDIT.md  MIGRATION.md  Taskfile.yml  build-profile.json5  hvigorfile.ts  oh-package.json5
harmony/AppScope/: app.json5
harmony/docs/: CHANGELOG.md
harmony/entry/: build-profile.json5  hvigorfile.ts  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
harmony/hvigor/: hvigor-config.json5
mobilecrypto/: .gitignore  README.md  crypto.go  crypto_test.go  go.mod  go.sum
mobilecrypto/scripts/: build-android.sh  build-ios.sh
phone/: .gitignore  .npmrc  README.md  Taskfile.yml  app.json  package-lock.json  package.json  pnpm-lock.yaml
phone/android/: settings.gradle
phone/app/: _layout.tsx  cloud-account.tsx  cloud-sync.tsx  me-appearance.tsx  me-data.tsx  me-protection.tsx  sync-conflicts.tsx  sync-host.tsx  sync.tsx
phone/components/: lock-overlay.tsx  onboarding-overlay.tsx  qr-scanner.tsx  space-avatar.tsx
phone/constants/: theme.ts
phone/contexts/: cloud-context.tsx  theme-context.tsx  ui-settings-context.tsx  vault-context.tsx
phone/data/: vault.ts
phone/hooks/: use-color-scheme.ts  use-color-scheme.web.ts
phone/lib/: app-settings.ts  (+20 more)
scripts/: sync-tokens.py
spec/: 00-overview.md  01-architecture.md  02-crates.md  03-vault-format.md  04-crypto-contract.md  05-vault-service-api.md  05a-vault-event-model.md  06-otp.md  07-passkey.md  08-ssh-agent.md  09-browser-bridge.md  10-trusted-device.md  11-gpui-ui-architecture.md  12-testing-strategy.md  13-migration-checklist.md  14-build-and-validation.md  15-phased-roadmap.md  16-open-questions.md  README.md
website/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  astro.config.mjs  deploy.sh  docker-compose.yml  nixpacks.toml  package-lock.json  package.json
(+484 files in other folders)
