[package]
name = "cryptocore"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"
description = "ZPass cross-platform crypto primitives (Argon2id + XChaCha20-Poly1305). 同一 vault 文件可在 desktop / phone / extension 间互通解读。"

[lib]
# rlib  —— 给 Rust 端测试 / 未来 desktop 复用
# cdylib —— 给 Android / HarmonyOS NAPI / iOS 出 .so / .dylib
# staticlib —— 给 iOS 出 .a
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = []
# android JNI 桥 + 手机作为局域网同步服务端的最小 HTTP 监听（tiny_http）
# 与本机 LAN IPv4 枚举（if-addrs）。tiny_http / if-addrs 只在 android 启用，
# 桌面 rlib / iOS staticlib 不引入。
android = ["dep:jni", "dep:tiny_http", "dep:if-addrs"]
# HarmonyOS NAPI 桥（aarch64/x86_64-unknown-linux-ohos）—— 与 android JNI 并列
harmony = ["dep:napi-ohos", "dep:napi-derive-ohos"]

[dependencies]
# RFC 9106 Argon2id；与 Go 的 golang.org/x/crypto/argon2 字节级对齐
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
# XChaCha20-Poly1305；与 Go 的 chacha20poly1305.NewX 字节级对齐
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
# 操作系统 CSPRNG；失败要返错而非 panic
rand_core = { version = "0.6", features = ["std"] }
getrandom = "0.2"
# 仅在 feature=android 时启用
jni = { version = "0.21", default-features = false, optional = true }
# 仅在 feature=harmony 时启用 —— 使用 ohos-rs 提供的 napi-ohos fork。
# 上游 napi crate 不带 OHOS 模块自动注册（OHOS NAPI 走 napi_module_register
# constructor，而非 Node.js 的 napi_register_module_v1），所以 .so 加载后所有
# 导出（如 randomBytes）都会拿不到。napi-ohos 解决了这个差异。
#
# napi-derive-ohos 的过程宏展开后会硬引用 `napi_ohos::...`，所以不能 alias
# 回原名，得在源码里直接 use napi_ohos::...
napi-ohos = { version = "1.1", default-features = false, features = ["napi5", "async"], optional = true }
napi-derive-ohos = { version = "1.1", optional = true }

# ---- sync 子模块依赖（同步协议；PAKE 握手 + CBOR proto + 会话 AEAD） ----
# SPAKE2 PAKE 实现（magic-wormhole 同款，生产级）
spake2 = "0.4"
# 协议消息序列化
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
# CBOR 编码（确定性编码 / 无外部 schema 文件 / std 友好）
ciborium = "0.2"
# 二进制 SHA-256（用于 contentHash 与协议 transcript hash）
sha2 = { version = "0.10", default-features = false }
# 常数时间比较（防止侧信道）
subtle = "2.5"
# 协议十六进制编码（PIN 派生输入 / 会话 ID 展示）
hex = "0.4"
# ---- android 同步服务端依赖（仅 feature=android）----
# 纯 Rust 阻塞式 HTTP/1.1 服务端；手机作为 LAN 同步 server 时监听入站连接，
# 把 (method, path, body) 经 JNI 反向回调交给 TS 侧处理。明文 HTTP（局域网内
# 由 PSK + 会话 AEAD 保证机密性，与 desktop server 同构），不需要 TLS。
tiny_http = { version = "0.12.0", optional = true }
# 枚举本机网卡的 LAN IPv4，用于构建 zpass-sync://host:port?pin= 连接串 / QR，
# 替代在 JS 侧引入 expo-network。
if-addrs = { version = "0.15.0", optional = true }

[dev-dependencies]

[build-dependencies]
# napi-build-ohos 的 build 助手；feature=harmony 时由 build.rs 调用。
# 体积极小，不汇报成 optional（build-dependencies 不支持 optional = true）。
napi-build-ohos = "1.1"

[profile.release]
# 体积优先：移动端的 .so 越小越好
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
