[package]
name = "cryptocore"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"
description = "ZPass cross-platform crypto primitives (Argon2id + XChaCha20-Poly1305). 同一 vault 文件可在 desktop / phone / extension 间互通解读。"

[lib]
# rlib  —— 给 Rust 端测试 / 未来 desktop 复用
# cdylib —— 给 Android / HarmonyOS NAPI / iOS 出 .so / .dylib
# staticlib —— 给 iOS 出 .a
crate-type = ["rlib", "cdylib", "staticlib"]

# wasm-pack: 禁用捆绑 wasm-opt。Rust 默认生成 bulk-memory 指令(memory.copy/fill),
# 而 wasm-pack 捆绑的旧版 wasm-opt 未开 --enable-bulk-memory 会校验失败。
# MVP 不需要体积优化;跳过 wasm-opt 即可(产物功能不受影响)。
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[features]
default = []
# 第五端：cryptocore -> WASM。让【整个 crate】的 OsRng 走 Web Crypto
# （getrandom/js），并编入 #[wasm_bindgen] 薄绑定层（wasm.rs）。
# 不进 default：android/harmony/cdylib/staticlib 编译图不受影响。
wasm = ["dep:wasm-bindgen", "getrandom/js"]
# 内部 feature：局域网同步服务端传输层（tiny_http 监听 + 本机 LAN IPv4 枚举）。
# 不是独立可用的公开 feature —— 仅由 android / harmony 传递性开启，
# 把 tiny_http / if-addrs 收敛到一处，避免两座桥各自重复声明依赖。
lan-server = ["dep:tiny_http", "dep:if-addrs"]
# android JNI 桥 + 手机作为局域网同步服务端。
# 桌面 rlib / iOS staticlib 不引入 lan-server。
android = ["dep:jni", "lan-server"]
# HarmonyOS NAPI 桥（aarch64/x86_64-unknown-linux-ohos）—— 与 android JNI 并列。
# napi5 提供 ThreadsafeFunction（napi4+）；lan-server 引入同步服务端传输层。
harmony = ["dep:napi-ohos", "dep:napi-derive-ohos", "lan-server"]

[dependencies]
# RFC 9106 Argon2id；与 Go 的 golang.org/x/crypto/argon2 字节级对齐
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
# XChaCha20-Poly1305；与 Go 的 chacha20poly1305.NewX 字节级对齐
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
# 操作系统 CSPRNG；失败要返错而非 panic
rand_core = { version = "0.6", features = ["std"] }
getrandom = "0.2"
# HKDF-SHA256（RFC 5869）；底层 SHA-256 复用已有 sha2 0.10，避免引入第二份哈希实现
hkdf = "0.12"
# X25519（账户 keyset + sealed-box）；curve25519-dalek 4.x 已经由 spake2 引入，
# x25519-dalek 2.x 共用同一份 curve25519-dalek，不会引入第二个 rand_core/getrandom。
# static_secrets：keyset_generate 需要 StaticSecret 持有可序列化的 32B 私钥。
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
# SRP-6a bignum modexp 自控实现（自 num-bigint），便于逐字节锁 PAD/k/u/M1/M2 向量。
# 不用 RustCrypto srp crate：其 transcript/PAD 与 RFC 5054 不逐字一致，会破坏四端对齐。
num-bigint = { version = "0.4", default-features = false }
# 主密码 NFKD 规范化（2SKD Step 4），四端必须一致（Go x/text/unicode/norm / JS normalize("NFKD")）
unicode-normalization = "0.1"
# 敏感字节 Drop 时强制清零（write_volatile + 内存屏障）；AGENTS.md 铁律
zeroize = { version = "1.8", features = ["derive"] }
# WASM 第五端薄绑定；仅在 feature=wasm 时编入，不污染 default / 移动端编译图
wasm-bindgen = { version = "0.2", optional = true }
# 仅在 feature=android 时启用
jni = { version = "0.21", default-features = false, optional = true }
# 仅在 feature=harmony 时启用 —— 使用 ohos-rs 提供的 napi-ohos fork。
# 上游 napi crate 不带 OHOS 模块自动注册（OHOS NAPI 走 napi_module_register
# constructor，而非 Node.js 的 napi_register_module_v1），所以 .so 加载后所有
# 导出（如 randomBytes）都会拿不到。napi-ohos 解决了这个差异。
#
# napi-derive-ohos 的过程宏展开后会硬引用 `napi_ohos::...`，所以不能 alias
# 回原名，得在源码里直接 use napi_ohos::...
napi-ohos = { version = "1.1", default-features = false, features = ["napi5", "async"], optional = true }
napi-derive-ohos = { version = "1.1", optional = true }

# ---- sync 子模块依赖（同步协议；PAKE 握手 + CBOR proto + 会话 AEAD） ----
# SPAKE2 PAKE 实现（magic-wormhole 同款，生产级）
spake2 = "0.4"
# 协议消息序列化
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
# CBOR 编码（确定性编码 / 无外部 schema 文件 / std 友好）
ciborium = "0.2"
# 二进制 SHA-256（用于 contentHash 与协议 transcript hash）
sha2 = { version = "0.10", default-features = false }
# 常数时间比较（防止侧信道）
subtle = "2.5"
# 协议十六进制编码（PIN 派生输入 / 会话 ID 展示）
hex = "0.4"
# ---- 局域网同步服务端传输层依赖（feature=lan-server，由 android / harmony 共同启用）----
# 纯 Rust 阻塞式 HTTP/1.1 服务端；设备作为 LAN 同步 server 时监听入站连接，
# 把 (method, path, body) 经反向回调（JNI / napi TSFN）交给宿主语言处理。明文 HTTP
# （局域网内由 PSK + 会话 AEAD 保证机密性，与 desktop server 同构），不需要 TLS。
tiny_http = { version = "0.12.0", optional = true }
# 枚举本机网卡的 LAN IPv4，用于构建 zpass-sync://host:port?pin= 连接串 / QR，
# 替代在 JS 侧引入 expo-network。
if-addrs = { version = "0.15.0", optional = true }

[dev-dependencies]

[build-dependencies]
# napi-build-ohos 的 build 助手；feature=harmony 时由 build.rs 调用。
# 体积极小，不汇报成 optional（build-dependencies 不支持 optional = true）。
napi-build-ohos = "1.1"

[profile.release]
# 体积优先：移动端的 .so 越小越好
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
