[package]
name = "zpass-otp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TOTP / HOTP / Steam Guard 纯计算（spec/06）"
publish = false

[features]
default = ["alloc"]
# 始终需要 alloc（String / Vec）。no_std target 上不依赖 std。
alloc = []

[dependencies]
hmac.workspace = true
sha1.workspace = true
sha2.workspace = true
data-encoding.workspace = true
zeroize.workspace = true

[dev-dependencies]
hex-literal.workspace = true
