[package]
name = "zpass-ssh-agent-proto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "zpass-desktop 与 zpass-agent 之间的 wire protocol（spec/08）"
publish = false

[features]
default = ["os-rng"]
os-rng = ["dep:getrandom"]

[dependencies]
ciborium = { workspace = true }
ciborium-io = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
# subtle 默认开 std；这里显式关闭以保持 no_std。
subtle = { version = "2", default-features = false }
serde = { workspace = true }
zeroize = { workspace = true }
getrandom = { workspace = true, optional = true }

[dev-dependencies]
hex-literal = { workspace = true }
