[package]
name = "zpass-desktop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GPUI 桌面主程序"
publish = false

[[bin]]
name = "zpass-desktop"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
# 主密码 / login 密码经 UI 流转时即时包 Zeroizing<String>；见 screens/{onboarding,unlock,vault}.rs。
zeroize.workspace = true
zpass-crypto = { path = "../../crates/zpass-crypto" }
zpass-vault-format = { path = "../../crates/zpass-vault-format" }
zpass-vault-store = { path = "../../crates/zpass-vault-store" }
zpass-vault-service = { path = "../../crates/zpass-vault-service" }
zpass-platform = { path = "../../crates/zpass-platform" }
zpass-config = { path = "../../crates/zpass-config" }
zpass-otp = { path = "../../crates/zpass-otp" }
zpass-passkey = { path = "../../crates/zpass-passkey" }
zpass-ssh-agent-proto = { path = "../../crates/zpass-ssh-agent-proto" }
# 桌面层 services（Phase C）
rfd.workspace = true
rxing.workspace = true
image.workspace = true
arboard.workspace = true
getrandom.workspace = true
ssh-key.workspace = true
ssh-encoding.workspace = true
# ssh-key 的 Signer<Signature> impl 来自 signature crate；ssh-key 没 re-export 它。
signature = "2"

[dev-dependencies]
zpass-vault-service = { path = "../../crates/zpass-vault-service", features = ["test-helpers"] }
# gpui 的 test-support feature 提供 TestAppContext + #[gpui::test] runtime。
gpui = { workspace = true, features = ["test-support"] }
